ddetect (0.68) UNRELEASED; urgency=low

  * Joey Hess
    - Update to debhelper v4, and use its udeb support.
    - Remove empty and apparently unused prebaseconfig script from ethdetect.
  * Thiemo Seufer
    - Cleanup match pattern for sd_mod, sr_mod in hw-detect.sh.
  * Translations:
    - Kenshi Muto
      - Update Japanese translation (ja.po)
    - Kęstutis Biliūnas
      - Updated Lithuanian translation (lt.po)
    - Changwoo Ryu
      - Added Korean translation (ko.po)

 -- Joey Hess <joeyh@debian.org>  Fri, 13 Feb 2004 13:46:31 -0500

ddetect (0.67) unstable; urgency=low

  * Joey Hess
    - Avoid an infinite loop in ethdetect if there are no ethernet drivers
      available at all.
  * Matt Kraai
    - Always ask for module parameters when loading the ne module (closes:
      #220971).
  * Translations
    - Andre Dahlqvist
      - Update Swedish translation (sv.po)
  * Eugen Meshcheryakov : added Ukrainian translation (uk.po)

 -- Joey Hess <joeyh@debian.org>  Sun,  8 Feb 2004 19:11:54 -0500

ddetect (0.66) unstable; urgency=low

  * Christian Perrier
    - Switch one template in ethdetect to error type
  * Translations
    - Bartosz Fenski
      - Updated Polish (pl) translation.
    - Giuseppe Sacco
      - applied patch for normalizing menus and some italian translation (it.po)
    - Kenshi Muto
      - Updated Japanese translation (ja.po)
    - Miguel Figueiredo
      - Updated Portuguese translation (pt.po)
    - André Luís Lopes
      - Updated Brazilian Portuguese (pt_BR) translation.
    - h3li0s
      - Added Albanian translation (sq.po)
    - Jordi Mallach
      - Update Catalan translation (ca.po).
    - Kęstutis Biliūnas
      - Update Lithuanian translation (lt.po).
    - Alwin Meschede
      - Updated German translation (de.po)
    - Safir Šećerović
      - Update Bosnian translation (bs.po).
    - Christian Perrier
      - Updated French (fr) translation.
    - Bart Cornelis
      - Updated Dutch (nl.po) translation
